[tool.poetry]
authors = [
  "Joseph Lou <jdlou@princeton.edu>",
  "Jérémie Lumbroso <lumbroso@cs.princeton.edu>",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A massively scalable document source comparator, using Google Spreadsheets API + Python."
homepage = "https://github.com/josephlou5/roseingrave"
include = [
  "README.md",
]
keywords = [
  "digital humanities",
]
license = "LGPL-3.0-or-later"
name = "roseingrave"
readme = "README.md"
repository = "https://github.com/josephlou5/roseingrave"
version = "0.10.0"

[tool.poetry.scripts]
roseingrave = "roseingrave.__main__:cli"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{39}
[testenv]
requires =
    tox-poetry-dev-dependencies
poetry_add_dev_dependencies = True
commands =
    pytest
"""

[tool.poetry.dependencies]
cachetools = "5.2.0"
certifi = "2022.6.15"
charset-normalizer = "2.0.12"
click = "8.1.3"
google-auth = "2.9.0"
google-auth-oauthlib = "0.5.2"
gspread = "5.5.0"
idna = "3.3"
loguru = "0.6.0"
oauthlib = "3.2.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
python = ">=3.9,<4.0"
requests = "2.28.0"
requests-oauthlib = "1.3.1"
rsa = "4.8"
six = "1.16.0"
urllib3 = "1.26.9"

[tool.poetry.dev-dependencies]
#codecov = "^2.1.10"
#pytest = "^5.2"
#pytest-cov = "^2.10.1"
#pytest-mock = "^3.3.1"
#pytest-repeat = "^0.9.1"
#pytest-subtests = "^0.3.2"
#sphinx = "^3.3.0"
#sphinx-autodoc-typehints = "^1.11.1"
#sphinx-rtd-theme = "^0.5.0"
#tox = "^3.20.1"
#tox-poetry-dev-dependencies = "^0.0.9"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
