[tool.poetry]
authors = [
  "Joseph Lou <jdlou@princeton.edu>",
  "Jérémie Lumbroso <lumbroso@cs.princeton.edu>",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A massively scalable document source comparator, using Google Spreadsheets API + Python."
homepage = "https://github.com/scarlatti/roseingrave"
include = [
  "README.md",
]
keywords = [
  "digital humanities",
]
license = "LGPL-3.0-or-later"
name = "roseingrave"
readme = "README.md"
repository = "https://github.com/scarlatti/roseingrave"
version = "0.11.0"

[tool.poetry.scripts]
roseingrave = "roseingrave.__main__:cli"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{39}
[testenv]
requires =
    tox-poetry-dev-dependencies
poetry_add_dev_dependencies = True
commands =
    pytest
"""

[tool.poetry.dependencies]
cachetools = "5.2.0"
certifi = "2022.6.15"
charset-normalizer = "2.0.12"
click = "8.1.3"
google-auth = "2.9.0"
google-auth-oauthlib = "0.5.2"
gspread = "5.5.0"
idna = "3.3"
loguru = "0.6.0"
oauthlib = "3.2.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
python = ">=3.9,<4.0"
requests = "2.28.0"
requests-oauthlib = "1.3.1"
rsa = "4.8"
six = "1.16.0"
urllib3 = "1.26.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.16.2"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
# Just setting the profile will use the `black` default line length of 88, so
# need to override line length as well
line_length = 79

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
